# vjepa-gray-scott

./: .gitignore  CONTRIBUTIONS.md  Makefile  NOTICE  README.md  pyproject.toml  run_baselines.sh  run_field.sh  run_final_table.sh  run_pca.sh  run_pca_anim.sh  run_pca_entropy.sh  run_plots.sh  run_potential.sh  run_render_slides.sh  run_viz.sh  run_walk.sh  slurm_perturb_ab.sh  slurm_probe.sh  slurm_test.sh  slurm_viz_s4baselines.sh  train_decoder.sh  train_gs_vjepa.sh  vrmse.sh
.github/workflows/: ci.yml
eb_jepa/: architectures.py  losses.py
eb_jepa/datasets/gray_scott/: data_config.yaml  dataset.py
gray_scott/: DESIGN.md  DESIGN_large.md  README.md  _well_baselines.py  analysis.py  baselines.py  eval.py  eval_baselines.py  eval_common.py  eval_compare.py  eval_regimes.py  field_metrics.py  final_table.py  gif_pca.py  gif_slides.py  latent_potential.py  latent_walk.py  main.py  pca.py  pca_entropy_anim.py  perturb_ab_gif.py  perturb_gif.py  plot_pca.py  plot_pca_entropy.py  plot_results.py  probe.py  render_slides.py  replot_bars.py  replot_field.py  slides_metrics.py  slurm_eval_regimes.sh  slurm_unroll_ood.sh  spirals_2panel.py  train_decoder.py  unroll_ood.py  visualize.py  viz_regimes_gif.py  viz_rollouts.py
gray_scott/archive/: README.md  analysis.py  field_metrics.py  final_table.py  latent_potential.py  latent_walk.py  pca.py  pca_entropy_anim.py  perturb_ab_gif.py  perturb_gif.py  plot_pca.py  plot_pca_entropy.py  plot_results.py  probe.py  render_slides.py  replot_bars.py  spirals_2panel.py  unroll_ood.py  visualize.py  viz_regimes_gif.py  viz_rollouts.py
gray_scott/cfgs/: train.yaml  train_large.yaml  train_stride1.yaml  train_vjepa.yaml  train_vjepa_v2.yaml
gray_scott/viz/: regime_vrmse.csv  regime_vrmse_pooled.csv
scripts/: example_experiment.sh  run_baselines.sh  run_field.sh  run_final_table.sh  run_pca.sh  run_pca_anim.sh  run_pca_entropy.sh  run_plots.sh  run_potential.sh  run_render_slides.sh  run_viz.sh  run_walk.sh  slurm_analysis.sh  slurm_eval_regimes.sh  slurm_eval_then_large.sh  slurm_pca.sh  slurm_perturb_ab.sh  slurm_probe.sh  slurm_test.sh  slurm_unroll_ood.sh  slurm_viz_s4baselines.sh  slurm_viz_withv2.sh  train_decoder.sh  train_gs_vjepa_v2.sh  vrmse.sh
tests/: conftest.py  test_smoke.py
