[project]
name = "vjepa-gray-scott"
version = "0.1.0"
description = "Temporal V-JEPA world models for Gray-Scott reaction-diffusion dynamics"
readme = "README.md"
license = "Apache-2.0"
# Team JEPAdormi (Hack the World(s) 2026). Built on facebookresearch/eb_jepa — see NOTICE.
authors = [
    {name = "Jules Dupont", email = "julesdupont02@gmail.com"},
    {name = "Adnan Ben Mansour"},
    {name = "Alexandre Duplessis"},
    {name = "Arthur Gilles"},
]
dependencies = [
    "torch>=2.7.0",
    "torchvision",
    "numpy",
    "scipy",
    "pillow",
    "einops>=0.8.1",
    "h5py>=3.16.0",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "imageio",
    "omegaconf",
    "wandb[media]>=0.21.1",
]
requires-python = "==3.12.*"

[project.optional-dependencies]
# The Well neural baselines + its dataset-download CLI (the-well-download).
# Not needed to train or to run the basic VRMSE eval; install with:
#   pip install -e ".[baselines]"
baselines = ["the_well"]

# aarch64 compute nodes (GB200) need CUDA wheels from the PyTorch index
[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" }
torchvision = { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eb_jepa*"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "autoflake",
]
